--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "joi-password-complexity": "^5.1.0",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "nodemailer": "^6.9.3"
   }
 }
